--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div id="text">Is your husband cheating on you? Take the test and find out!</div>
             <div id="option-buttons" class="btn-grid">
-                <button class="btn"><a href="test.html">Take the quiz</a></button>
+                <a href="test.html"><button class="btn">Take the quiz</button></a>
             </div>
         </div>
     </body>
